Actions
Bug #12622
closedgrover: smatch and NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointers:
../../../sun4u/grover/io/grfans.c: In function 'grfans_do_attach': ../../../sun4u/grover/io/grfans.c:218: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' ../../../sun4u/grover/io/grfans.c:231: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../../sun4u/grover/os/grover.c:91 load_platform_drivers() warn: ignoring unreachable code. /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../../sun4u/grover/os/grover.c:96 load_platform_drivers() warn: ignoring unreachable code.
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 12042ab213b3af68474f48555504db816a449211
commit 12042ab213b3af68474f48555504db816a449211 Author: Toomas Soome <tsoome@me.com> Date: 2020-05-10T06:45:20.000Z 12622 grover: smatch and NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions