usr/src/uts/sun4u/grover/os/grover.c
@@ -24,8 +24,6 @@
  * Use is subject to license terms.
  */
 
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
-
 #include <sys/param.h>
 #include <sys/systm.h>
 #include <sys/sunddi.h>
@@ -57,12 +55,12 @@ set_platform_defaults(void)
  * of Southbridge.
  */
 #define	GROVER_ISA_PATHNAME	"/pci@1f,0/isa@7"
-ddi_acc_handle_t 	grover_isa_handle;	/* handle for isa pci space */
+ddi_acc_handle_t	grover_isa_handle;	/* handle for isa pci space */
 
 void
 load_platform_drivers(void)
 {
-	dev_info_t 		*dip;		/* dip of the isa driver */
+	dev_info_t		*dip;		/* dip of the isa driver */
 
 
 	if (i_ddi_attach_hw_nodes("power") != DDI_SUCCESS)
@@ -88,12 +86,10 @@ load_platform_drivers(void)
 	dip = e_ddi_hold_devi_by_path(GROVER_ISA_PATHNAME, 0);
 	if (dip == NULL) {
 		cmn_err(CE_PANIC, "Could not install the isa driver\n");
-		return;
 	}
 
 	if (pci_config_setup(dip, &grover_isa_handle) != DDI_SUCCESS) {
 		cmn_err(CE_PANIC, "Could not get the config space of isa\n");
-		return;
 	}
 }
 
